kuber-homeworks_2.3/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginxandmulti
  template:
    metadata:
      labels:
        app: nginxandmulti
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html-volume
              mountPath: /usr/share/nginx/html/
        - name: multi
          image: wbitt/network-multitool:latest
          ports:
            - containerPort: 8080
      volumes:
        - name: html-volume
          configMap:
            name: my-configmap
