kuber-homeworks_2.3/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-web
spec:
  selector:
    app: nginxandmulti
  ports:
    - name: nginx
      protocol: TCP
      port: 9001
      targetPort: 80
    - name: multi
      protocol: TCP
      port: 9002
      targetPort: 8080
